add account service handler